objects/Question_Answer_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AnswerText__c</fullName>
        <formula>Answer__r.Answer__c</formula>
        <label>AnswerText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_Sequence__c</fullName>
        <label>Answer Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Answer</label>
        <referenceTo>Answer__c</referenceTo>
        <relationshipLabel>Questions Answer Mapping</relationshipLabel>
        <relationshipName>Questions_Answer_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuestionText__c</fullName>
        <formula>Question__r.Question__c</formula>
        <label>QuestionText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Questions Answer Mapping</relationshipLabel>
        <relationshipName>Questions_Answer_Mapping</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Question Answer Mapping</label>
    <nameField>
        <displayFormat>QAM - {0000}</displayFormat>
        <label>Question Answer Mapping ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions Answer Mapping</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>